--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -66,6 +66,16 @@
   perspective: 1000px;
   margin-top: 2rem;
   z-index: 2;
+  mask-image: linear-gradient(to bottom, 
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  -webkit-mask-image: linear-gradient(to bottom, 
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .crawl {
@@ -84,6 +94,17 @@
 .crawl p {
   margin: 2rem 0;
   line-height: 1.5;
+  opacity: 1;
+}
+
+.crawl p:nth-child(1) {
+  animation: fadeOut 30s linear forwards;
+  animation-delay: 5s;
+}
+
+.crawl p:nth-child(2) {
+  animation: fadeOut 30s linear forwards;
+  animation-delay: 15s;
 }
 
 @keyframes crawl {
@@ -94,6 +115,18 @@
   100% {
     top: -100%;
     transform: translateX(-50%) rotateX(25deg) translateZ(-2500px);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
