--- a/frontend/src/styles/LandingPage.css
+++ b/frontend/src/styles/LandingPage.css
@@ -64,18 +64,8 @@
   width: 100%;
   overflow: hidden;
   perspective: 1000px;
-  margin-top: 2rem;
+  margin-top: -10vh;
   z-index: 2;
-  mask-image: linear-gradient(to bottom, 
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 1) 50%,
-    rgba(0, 0, 0, 0) 100%
-  );
-  -webkit-mask-image: linear-gradient(to bottom, 
-    rgba(0, 0, 0, 1) 0%,
-    rgba(0, 0, 0, 1) 50%,
-    rgba(0, 0, 0, 0) 100%
-  );
 }
 
 .crawl {
@@ -87,7 +77,8 @@
   max-width: 800px;
   font-size: 2.5rem;
   text-align: center;
-  color: #FF0000;
+  color: #FFD700;
+  text-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
   animation: crawl 30s linear forwards;
 }
 
@@ -95,6 +86,7 @@
   margin: 2rem 0;
   line-height: 1.5;
   opacity: 1;
+  font-weight: bold;
 }
 
 .crawl p:nth-child(1) {
@@ -121,12 +113,15 @@
 @keyframes fadeOut {
   0% {
     opacity: 1;
+    text-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
   }
-  20% {
+  80% {
     opacity: 1;
+    text-shadow: 0 0 15px rgba(255, 215, 0, 0.7);
   }
   100% {
     opacity: 0;
+    text-shadow: 0 0 15px rgba(255, 215, 0, 0);
   }
 }
 
